fixed scrollbar in firefox and closing slider integration. fixes #19

--- a/src/containers/NotreHistoire/NotreHistoire.module.css
+++ b/src/containers/NotreHistoire/NotreHistoire.module.css
@@ -84,7 +84,7 @@
 .TitleWrapper p {
   height: 92px;
   overflow-y: scroll;
-  scrollbar-color: darkgray lightgray;
+  scrollbar-color: darkgray transparent;
   scrollbar-width: thin;
 }
 
